--- a/src/js/cpnt/invoice/single/style.scoped.scss
+++ b/src/js/cpnt/invoice/single/style.scoped.scss
@@ -321,9 +321,9 @@
     }
 
     address {
-      font-size: 14px;
+      font-size: 12px;
+      line-height: 150%;
       font-style: normal;
-      line-height: 20px;
       color: #718096;
       margin-bottom: 0;
     }
