discussion edit and del

--- a/src/scss/partials/_crud.scss
+++ b/src/scss/partials/_crud.scss
@@ -833,12 +833,13 @@
   .pv-dropdown-content {
     display: none;
     position: absolute;
-    min-width: 220px;
+    min-width: 200px;
     overflow: auto;
     box-shadow: 0px 0px 8px 1px rgb(0 0 0 / 13%);
     z-index: 1;
     background-color: #fff;
     border-radius: 8px;
+    right: 0;
 
     svg {
       margin-right: 10px;
