working with discussion edit del

--- a/src/scss/partials/_modal.scss
+++ b/src/scss/partials/_modal.scss
@@ -529,9 +529,9 @@
     display: grid;
     grid-template-columns: 60% 40%;
 
-    .pv-modal-footer {
+    /* .pv-modal-footer {
       padding: 0;
-    }
+    } */
 
     .pv-modal-task-content {
       overflow-y: scroll;
