fixed some clickup issues

--- a/src/scss/partials/_widget.scss
+++ b/src/scss/partials/_widget.scss
@@ -28,9 +28,8 @@
         border-radius: 50%;
       }
 
-      h5,
-      p {
-        font-size: 10px !important;
+      h5 {
+        font-size: 12px !important;
       }
 
     }
