--- a/src/scss/partials/_widget.scss
+++ b/src/scss/partials/_widget.scss
@@ -141,13 +141,17 @@
       font-style: normal;
       font-size: 12px;
       color: #718096;
-      margin: 15px 0 10px 0;
+      margin-bottom: 10px;
 
       span {
         display: block;
         color: #4A5568;
         font-weight: 500;
         margin-top: 10px;
+      }
+
+      span:first-child {
+        margin-top: 0;
       }
     }
 
